# dsc-capstone-picker

./: .gitignore  README.md  pyproject.toml
examples/: profile.txt  resume.txt
src/dsc_capstone_picker/: __init__.py  cli.py  export.py  llm.py  models.py  rank.py  resume.py  scrape.py  search.py
tests/: test_export.py  test_llm.py  test_models.py  test_rank.py  test_resume.py  test_scrape.py  test_search.py
