[project]
name = "dsc-capstone-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tejassmani", email = "tmani@ucsd.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "typer>=0.26.7",
]

[project.scripts]
dsc-capstone-picker = "dsc_capstone_picker:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
